--- a/chatapp/nbproject/project.properties
+++ b/chatapp/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ST10478485.jar
+dist.jar=${dist.dir}/chatapp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ST10478485
+dist.jlink.output=${dist.jlink.dir}/chatapp
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ST10478485
-main.class=st10478485.ST10478485
+jlink.launcher.name=chatapp
+main.class=chatapp.chatapp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
